--- a/package.json
+++ b/package.json
@@ -3,30 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.7.1",
-    "@emotion/styled": "^11.6.0",
+    "@babel/preset-env": "^7.20.2",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@humanwhocodes/config-array": "^0.11.8",
     "@material-ui/core": "^4.12.3",
-    "@material-ui/icons": "^4.11.2",
+    "@material-ui/icons": "^4.11.3",
     "@material-ui/lab": "^4.0.0-alpha.60",
-    "@mui/icons-material": "^5.3.1",
-    "@mui/material": "^5.3.1",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.11.5",
     "@n8tb1t/use-scroll-position": "^2.0.3",
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.4.0",
-    "@types/node": "^16.11.21",
-    "@types/react": "^17.0.38",
-    "@types/react-dom": "^17.0.11",
-    "framer-motion": "^6.2.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-material-ui-carousel": "^3.2.0",
-    "react-responsive": "^9.0.0-beta.6",
-    "react-scripts": "5.0.0",
-    "react-tsparticles": "^1.39.1",
-    "typescript": "^4.5.5",
-    "web-vitals": "^2.1.4"
+    "@types/jest": "^29.2.6",
+    "@types/node": "^18.11.18",
+    "@types/react": "^18.0.27",
+    "@types/react-dom": "^18.0.10",
+    "framer-motion": "^6.5.1",
+    "react": "^18.0.0",
+    "react-dom": "^18.2.0",
+    "react-material-ui-carousel": "^3.4.2",
+    "react-responsive": "^9.0.2",
+    "react-tsparticles": "^1.0.0",
+    "typescript": "^4.9.4",
+    "web-vitals": "^3.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -55,7 +53,15 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.2.3"
+    "@babel/plugin-proposal-decorators": "^7.20.7",
+    "@babel/plugin-transform-flow-strip-types": "^7.19.0",
+    "@babel/plugin-transform-react-constant-elements": "^7.20.2",
+    "@babel/plugin-transform-runtime": "^7.19.6",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.18.6",
+    "gh-pages": "^4.0.0",
+    "prettier": "^2.8.3",
+    "react-scripts": "^5.0.1"
   },
   "homepage": "https://nsarrazin.com"
 }
