--- a/package.json
+++ b/package.json
@@ -13,16 +13,27 @@
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.5",
     "@n8tb1t/use-scroll-position": "^2.0.3",
+    "@react-hookz/web": "^22.0.0",
+    "@react-three/cannon": "^6.5.2",
+    "@react-three/drei": "^9.53.0",
+    "@react-three/fiber": "^8.10.0",
+    "@react-three/postprocessing": "^2.7.0",
     "@types/jest": "^29.2.6",
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "babel-plugin-glsl": "^1.0.0",
     "framer-motion": "^6.5.1",
+    "glsl-noise": "^0.0.0",
+    "glslify": "^7.1.1",
     "react": "^18.0.0",
     "react-dom": "^18.2.0",
     "react-material-ui-carousel": "^3.4.2",
     "react-responsive": "^9.0.2",
+    "react-spring": "^9.6.1",
     "react-tsparticles": "^1.0.0",
+    "three": "^0.148.0",
+    "threejs-meshline": "^2.0.12",
     "typescript": "^4.9.4",
     "web-vitals": "^3.1.1"
   },
@@ -59,7 +70,9 @@
     "@babel/plugin-transform-runtime": "^7.19.6",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
+    "@types/three": "^0.148.0",
     "gh-pages": "^4.0.0",
+    "gltfjsx": "^6.1.3",
     "prettier": "^2.8.3",
     "react-scripts": "^5.0.1"
   },
