--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "babel-plugin-glsl": "^1.0.0",
+    "chroma-js": "^2.4.2",
     "framer-motion": "^6.5.1",
     "glsl-noise": "^0.0.0",
     "glslify": "^7.1.1",
@@ -70,6 +71,7 @@
     "@babel/plugin-transform-runtime": "^7.19.6",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
+    "@types/chroma-js": "^2.1.4",
     "@types/three": "^0.148.0",
     "gh-pages": "^4.0.0",
     "gltfjsx": "^6.1.3",
